src/objects/Milestone_MERC__c.object
<CustomObject>
    <description>Object to track meeting milestones.  Created on 9/27/2013 by KLorenti.</description>
    <fields>
        <fullName>Due_Date_MERC__c</fullName>
        <description>Due date of Milestone. Created 9/27/2013 by KLorenti.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master-Detail Relationship from Milestone to Meeting. Created 9/30/2013 by KLorenti.</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_MERC__c</fullName>
        <description>Status of Milestone. Created 9/27/2013 by KLorenti.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>